src/objects/Contract_List__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Total__c</fullName>
        <label>Amount Total</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_p_a__c</fullName>
        <label>Amount p.a.</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus__c</fullName>
        <label>Bonus %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Contract_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rbon__c</fullName>
        <label>Rbon %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VSR__c</fullName>
        <label>VSR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vbon__c</fullName>
        <label>Vbon %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Zbon__c</fullName>
        <label>Zbon %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Contract List</label>
    <nameField>
        <label>Contract List</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>